fixing align

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,10 @@
 .footer {
   display: flex;
   margin: 0px 20px;
+  ul {
+    margin-block-start: 0;
+    padding-inline-start: 0;
+  }
 }
 
 .footer-main-box {
